--- a/css/app.css
+++ b/css/app.css
@@ -20,3 +20,20 @@ nav {
 footer {
   background-color: #ddddff;
 }
+
+
+.itemBox {
+  width: 400px;
+  border: solid 1px #444;
+  margin: 3px auto;
+}
+.itemName:before {
+  content: "商品名：";
+  font-size: 80%;
+  font-weight: bold;
+  vertical-align: bottom;
+}
+.itemName {
+}
+
+
